# solana-spl-token-anchor

./: Anchor.toml  README.md  package-lock.json  package.json
programs/spl_token_project/: Cargo.toml
programs/spl_token_project/src/: lib.rs
tests/: client.js  package-lock.json  package.json
